assets/css/amp-editor-story-blocks.css
/* ... */
.amp-grid-template-fill .editor-block-list__block-edit > div:last-child {
	display: flex;
	flex: 1;
}

.amp-grid-template-fill .components-resizable-box__container {
	width: 318px;
	height: 533px;
}

.amp-grid-template-fill .components-disabled {
	width: 318px;
	max-height: 533px;
	overflow: hidden;
}

.amp-grid-template-fill .wp-block-image,
.amp-grid-template-fill .wp-block-video {
	margin-top: 0;
	margin-bottom: 0;
}

.amp-grid-template-fill .components-resizable-box__container img {
	object-fit: cover;
	width: 318px !important;
	height: 533px !important;
}

div[data-amp-type="grid"] .block-library-image__resizer {
	max-width: 318px !important;
	max-height: 533px !important;
}

.amp-grid-template-fill > :not(:first-child) {
	display: none;
}

/*
 * 5.3 CTA layer.
 */

.editor-block-list__layout div[data-type="amp/amp-story-cta-layer"] {
	position: absolute;
	height: 20%;
	width: 318px;
	bottom: 38px;
}

.editor-block-list__layout div[data-type="amp/amp-story-cta-layer"] .editor-block-list__block-edit {
	max-height: 100%;
}

.editor-block-list__layout div[data-type="amp/amp-story-cta-layer"] .editor-block-list__layout:first-of-type {
	height: auto !important;
}

/*
 * 6. Inserter customisations.
 */

 .components-popover.editor-inserter__amp .components-popover__content {
	height: 200px;
}

/* Fade out CTA Layer in inserter when it's already present */
.editor-inserter__popover .amp-story-has-cta-layer .editor-block-list-item-amp-amp-story-cta-layer {
	opacity: 0.5;
}

/*
 * 6.1 Ghosted page inserter
 * Change the last inserter into a ghosted page.
 */

.post-type-amp_story .editor-default-block-appender {
	max-width: 318px;
}

.post-type-amp_story .editor-default-block-appender .editor-inserter {
	position: relative;
	margin: 0 auto;
	left: 0;
	top: 0;
}

.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__insertion-point,
.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .block-list-appender {
	position: static;
	margin-top: 38px;
}

.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__insertion-point-inserter {
	opacity: 1;
}

.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .block-list-appender .components-button,
.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__insertion-point-inserter .components-icon-button,
.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .block-list-appender .components-button {
	background-color: #FAFAFA;
	background-image: url( '../images/add-page-inserter.svg' );
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 86px 96px;
	border: 10px solid #eff0f1;
	border-radius: 0;
	height: 533px;
	width: 338px;
	margin: 0 auto;
	outline: none;
}

.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__insertion-point-inserter .components-icon-button:hover,
.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__insertion-point-inserter .components-icon-button:focus {
	box-shadow: inset 0 0 0 1px #e2e4e7,inset 0 0 0 2px #fff, 0 1px 1px rgba(25,30,35,.2);
}

.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__insertion-point-inserter .components-icon-button svg,
.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .block-list-appender .components-button svg {
	display: none;
}

.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout > .editor-block-list__block[data-type="core/paragraph"] .editor-block-list__block-edit {
	display: none;
}

/*
 * 7. Block navigator
 * Hides the toggler and shows the navigator by default on large screens.
 */

@media( max-width: 949px) {
	.editor-block-list__block-edit > div > .editor-selectors {
		display: none;
	}
}

@media (min-width: 950px) {
	.components-icon-button.editor-block-navigation {
			display: none;
	}

	.edit-post-visual-editor .editor-block-list__block-edit .editor-selectors {
			position: fixed;
			left: 200px;
			top: 150px;
			width: 300px;
			z-index: 80;
			list-style-type: none;
			padding: 0;
			margin: 0;
	}

	.edit-post-visual-editor .editor-block-list__block-edit .editor-selectors .editor-block-navigation__list {
		list-style-type: none;
	}

	.edit-post-visual-editor .editor-block-list__block-edit .editor-selectors .components-icon-button .dashicon {
		margin-right: 5px;
	}

	.editor-selectors .component-editor__selector button {
		background: no-repeat left top;
		padding-left: 37px;
		height: 40px;
		margin: 1px 0 1px 4px;
	}

	.editor-selectors .component-editor__selector .components-button:focus {
		box-shadow: none;
	}

	.post-type-amp_story .components-range-control__number {
		width: 60px;
	}
}

/*
 * 8. Shame
 */

/*
 * 8.1 Gutenberg - Warning div not clickable
 * Fixes Gutenberg bug where an extra wrapping div is causing no pointer events on the notice layer.
 */

.post-type-amp_story .editor-block-list__layout .editor-block-list__block.has-warning .editor-block-list__block-edit > :not(.editor-warning) {
	pointer-events: all;
}

.post-type-amp_story .editor-block-list__layout .editor-block-list__block.has-warning .editor-block-list__block-edit > div > div:not(.editor-warning) {
	pointer-events: none;
}

